--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   padding: .2em;
   background-color: #ffffff;
   float: left;
-
+  height: 6.25em;
 }
 
 img.logo {
@@ -37,21 +37,24 @@ img.logo {
 }
 
 header {
-  padding: .5em;
+  padding-left: .5em;
+  padding-right: .5em;
   /*margin-right: 2em;*/
   background-color: #7e850a;
   color: #ffffff;
   /*display: inline;*/
 }
 header h1 {
+  padding-top: .5em;
   padding-left: 12em;
   text-align: center;
   letter-spacing: .2em;
 }
-header h4 {
-  /*float: right;*/
-  /*clear: left;*/
+header h3 {
+  padding-right: 4.625em;
   text-align: right;
+  margin-top: 0;
+  margin-bottom: .2em;
 }
 
 nav {
