--- a/style.css
+++ b/style.css
@@ -26,23 +26,25 @@ body {
 }
 
 .logo {
-  padding: .2em;
-  background-color: #ffffff;
+  border: .3em solid #ffffff;
   float: left;
   height: 6.25em;
+  /*margin: .2em;*/
+  position: relative;
 }
 
 img.logo {
   margin: .2em;
+  height: 100%;
 }
 
 header {
   padding-left: .5em;
   padding-right: .5em;
-  /*margin-right: 2em;*/
+  margin: 0 auto;
   background-color: #7e850a;
   color: #ffffff;
-  /*display: inline;*/
+  height: 7em;
 }
 header h1 {
   padding-top: .5em;
@@ -54,7 +56,7 @@ header h3 {
   padding-right: 4.625em;
   text-align: right;
   margin-top: 0;
-  margin-bottom: .2em;
+  margin-bottom: 0;
 }
 
 nav {
