--- a/style.css
+++ b/style.css
@@ -26,13 +26,15 @@ body {
 }
 
 .logo {
-  /*border: .3em solid #ffffff;*/
+  border: .3em dashed #ffffff;
   float: left;
   /*height: 6.25em;*/
-  /*margin: .2em;*/
+  margin: .2em;
   /*position: relative;*/
   display: inline-flex;
-  clear: right;
+  /*clear: right;*/
+  padding: .4em;
+  background-color: #ffebd0;
   /*align-self: center;*/
   /*vertical-align: bottom;*/
 }
@@ -58,7 +60,7 @@ header {
 }
 header h1 {
   padding-top: .5em;
-  margin: 0 auto;
+  /*margin: 0 auto;*/
   padding-left: 12em;
   text-align: center;
   letter-spacing: .2em;
@@ -77,11 +79,12 @@ header h3 {
 nav {
   background-color: #cc6744;
   text-transform: uppercase;
+  /*margin: 0 auto;*/
   /*clear: both;*/
   /*float: right;*/
 }
 nav ul {
-  margin: 0;
+  margin: 0 auto;
   padding: 1em;
   /*clear: both;*/
 }
