pet table media q

--- a/style.css
+++ b/style.css
@@ -263,3 +263,11 @@ table .pet {
 
 
 /*MEDIA QS*/
+
+/*TABLET*/
+
+@media only screen and (max-width: 768px) {
+  td img {
+    width: 75%;
+  }
+}
