--- a/style.css
+++ b/style.css
@@ -158,6 +158,8 @@ footer ul a {
   text-decoration: none;
 }
 
+/*ABOUT PAGE*/
+
 .aboutCharlieImages {
   /*margin: 0 auto;*/
   text-align: center;
@@ -168,6 +170,12 @@ footer ul a {
 }
 .aboutCharlieImages img {
   border: .5em double #c1c943;
+}
+
+.about-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 /*FORM*/
@@ -259,18 +267,17 @@ table .pet {
   vertical-align: bottom;
 }
 
-.tabletPets {
+
+.tablet {
   display: none;
 }
-
-
 
 
 /*MEDIA QS*/
 
 /*TABLET*/
 
-@media only screen and (max-width: 769px) {
+@media only screen and (max-width: 768px) {
  .computerPets {
     display: none;
   }
@@ -288,5 +295,13 @@ table .pet {
   }
   table img {
     border: none;
+  }
+}
+
+/*MOBILE PHONE*/
+
+@media only screen and (max-width: 400px) {
+  .computerPets, .tabletPets {
+    display: none;
   }
 }
