--- a/style.css
+++ b/style.css
@@ -90,6 +90,8 @@ header h3 {
   margin-bottom: 0;
 }
 
+/*NAVIGATION*/
+
 nav {
   background-color: #cc6744;
   text-transform: uppercase;
@@ -270,6 +272,9 @@ iframe {
   width: 13em;
   border: .3em double #c1c943;
 }
+.mobile-aboutCharlieImages {
+  display: none;
+}
 
 /*FORM*/
 
@@ -364,6 +369,9 @@ table .pet {
 .tablet {
   display: none;
 }
+#mobile-logo {
+  display: none;
+}
 
 
 /*MEDIA QS*/
@@ -371,7 +379,10 @@ table .pet {
 /*TABLET*/
 
 @media only screen and (max-width: 768px) {
- .computerPets {
+ #mobile-logo {
+   display: none;
+   }
+   .computerPets {
     display: none;
   }
   .tabletPets {
@@ -389,6 +400,9 @@ table .pet {
   table img {
     border: none;
   }
+  .mobile-aboutCharlieImages {
+    display: none;
+  }
 }
 
 /*MOBILE PHONE*/
@@ -396,5 +410,57 @@ table .pet {
 @media only screen and (max-width: 400px) {
   .computerPets, .tabletPets {
     display: none;
+  }
+  .about-info img {
+    display: none;
+  }
+  .about-info {
+    display: block;
+  }
+  .about-table table {
+    display: none;
+  }
+  form {
+    width: 12em;
+    padding: .5em;
+    border: .5em double #c1c943;
+  }
+  textarea {
+    width: 15em;
+  }
+  #button {
+    font-size: .8em;
+  }
+  header h1 {
+    font-size: 1.2em;
+    padding: 1.15em;
+    text-align: center;
+    margin-bottom: 0;
+  }
+  header h3 {
+    display: none;
+  }
+  #logo {
+    display: none;
+  }
+  #mobile-logo {
+    display: flex;
+    float: left;
+    border: .2em solid white;
+    margin: .2em;
+  }
+  nav ul {
+    padding: .4em;
+  }
+  .aboutCharlieImages {
+    display: none;
+  }
+  .mobile-aboutCharlieImages {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+  }
+  hr {
+    border-width: .3em;
   }
 }
