resized about links

--- a/style.css
+++ b/style.css
@@ -92,6 +92,30 @@ nav li {
   /*position: relative;*/
 }
 
+.fade {
+   opacity: 1;
+   transition: opacity .25s ease-in-out;
+   -moz-transition: opacity .25s ease-in-out;
+   -webkit-transition: opacity .25s ease-in-out;
+   }
+
+.fade:hover {
+      opacity: 0.5;
+      }
+
+.nav-fade li {
+   background: #fff;
+   padding: 3px 8px;
+   display: inline-block;
+   transition: background .25s ease-in-out;
+   -moz-transition: background .25s ease-in-out;
+   -webkit-transition: background .25s ease-in-out;
+   }
+
+   .nav-fade li:hover {
+      background: #ddd;
+      } 
+
 /*MAIN*/
 
 main {
@@ -234,6 +258,11 @@ iframe {
   padding: 0;
 }
 
+/*.rescue {
+  display: flex;
+  justify-content: space-around;
+}*/
+
 .rescueLinks {
   width: 31.25em;
   background-color: #ffebd0;
@@ -316,12 +345,7 @@ iframe {
 }
 
 .about-table td {
-  padding: 0;
   height: 2em;
-}
-
-.about-table th {
-  padding: 0;
 }
 
 .about-table a:link {
@@ -333,7 +357,8 @@ iframe {
 }
 
 .about-table table {
-  width: 13em;
+  width: 11.25em;
+  height: 11.25em;
   border: .3em double #c1c943;
 }
 .mobile-aboutCharlieImages {
