--- a/style.css
+++ b/style.css
@@ -46,8 +46,6 @@ header {
 }
 header h1 {
   padding-top: .5em;
-  /*margin: 0 auto;*/
-  /*padding-left: 12em;*/
   padding-right: 2.5em;
   /*text-align: center;*/
   text-align: right;
@@ -56,11 +54,8 @@ header h1 {
 }
 header h3 {
   padding-right: 4.625em;
-  /*padding-left: 30em;*/
   text-align: right;
   padding-bottom: 2em;
-  /*margin-top: 0;*/
-  /*clear: left;*/
   margin-bottom: 0;
 }
 
@@ -149,6 +144,14 @@ footer li {
 footer ul a {
   text-decoration: none;
   color: #ffffff;
+}
+
+.extra-footer a:link {
+  color: #7e850a;
+}
+
+.extra-footer a:visited {
+  color: #c1c943;
 }
 
 .fadefoot li {
@@ -513,12 +516,10 @@ table .pet {
     flex-direction: row;
     flex: auto;
 
-
   }
   .aboutCharlieImages img {
     width: 70%;
     height: 70%;
-    /*flex-direction: row;*/
     margin: .3em;
   }
   .aboutCharlieImages p {
@@ -528,6 +529,12 @@ table .pet {
     display: flex;
     border: .625em double #c1c943;
     background-color: #ffebd0;
+  }
+  .tablet-blog a:link {
+    color: #872a0a;
+  }
+  .tablet-blog a:visited {
+    color: #cc6744;
   }
   .tablet-blog table {
     width: 37.5em;
@@ -644,6 +651,15 @@ table .pet {
     display: flex;
     flex-wrap: wrap;
   }
+  #adoptlink {
+    height: 4em;
+    width: 12em;
+  }
+
+  #adoptlink:hover {
+    height: 5em;
+    width: 13em;
+  }
   .rescueLinks {
     display: none;
   }
@@ -654,9 +670,6 @@ table .pet {
     display: none;
   }
   .tabletPets {
-    display: none;
-  }
-  #tabletrule {
     display: none;
   }
   .blog {
