--- a/style.css
+++ b/style.css
@@ -220,7 +220,6 @@ transition: background .25s ease-in-out;
 .emph {
   color: #872a0a;
   font-style: italic;
-  /*text-decoration: underline;*/
 }
 /*HOME PAGE*/
 
@@ -262,10 +261,10 @@ iframe {
   padding: 0;
 }
 
-/*.rescue {
+.rescue {
   display: flex;
-  justify-content: space-around;
-}*/
+  justify-content: space-between;
+}
 
 .rescueLinks {
   width: 37.5em;
@@ -276,11 +275,6 @@ iframe {
 
 .rescue-table a {
     padding-top: .1em;
-    /*height: 2em;*/
-  }
-
-  .rescue-table td {
-    padding: 0;
   }
 
   .rescue-table a:link {
@@ -305,7 +299,9 @@ iframe {
     width: 18.75em;
     background-color: #ffebd0;
     border: .625em double #c1c943;
-
+  }
+  .blog img {
+    border: .063em dotted #872a0a;
   }
 
   .blog a:link {
@@ -338,7 +334,8 @@ iframe {
   border: .625em double #c1c943;
 }
 .aboutCharlieImages img {
-  border: .1em dotted #872a0a;
+  border: .063em dotted #872a0a;
+  margin: 1em;
 }
 
 .about-info {
@@ -358,7 +355,6 @@ iframe {
 
 .about-table a:link {
   color: #872a0a;
-  /*text-decoration: none;*/
 }
 .about-table a:visited {
   color: #cc6744;
@@ -376,7 +372,6 @@ iframe {
 form {
   font-family: Garamond, serif;
   width: 35em;
-  /*align-items: center;*/
   margin: auto;
   background-color: #ffebd0;
   padding: 1em;
@@ -415,7 +410,7 @@ input {
 fieldset input {
   width: 15em;
 }
-#button {
+.button {
   font-family: Garamond, sans-serif;
   font-size: 1em;
   font-weight: bold;
@@ -429,7 +424,6 @@ fieldset input {
 /*ADOPT PAGE*/
 
 table {
-  /*width: 50%;*/
   border: .625em double #c1c943;
   border-spacing: 0;
   margin: 0 auto;
@@ -459,9 +453,6 @@ td img {
   display: inline-block;
   border: .063em dotted #872a0a;
 }
-table .pet {
-  vertical-align: bottom;
-}
 
 
 /*HIDDEN FOR FULL SCREEN*/
@@ -486,7 +477,7 @@ table .pet {
 }
 
 
-/*MEDIA QS*/
+/*MEDIA QUERIES*/
 
 /*TABLET*/
 
@@ -501,7 +492,7 @@ table .pet {
     display: block;
   }
 .banner {
-  height: 25em;
+  height: 28em;
 }
   table tr {
     margin: auto;
@@ -510,17 +501,13 @@ table .pet {
     border: none;
   }
   .aboutCharlieImages {
-    /*width: 18em;*/
     margin: 0 auto;
-    padding: none;
     flex-direction: row;
-    flex: auto;
-
   }
   .aboutCharlieImages img {
-    width: 70%;
-    height: 70%;
-    margin: .3em;
+    width: 45%;
+    height: 45%;
+    margin: .5em;
   }
   .aboutCharlieImages p {
     margin: 0;
@@ -594,7 +581,6 @@ table .pet {
     padding: 1.15em;
     text-align: center;
     margin-bottom: 0;
-    /*letter-spacing: 0;*/
   }
   header h3 {
     display: none;
@@ -655,7 +641,6 @@ table .pet {
     height: 4em;
     width: 12em;
   }
-
   #adoptlink:hover {
     height: 5em;
     width: 13em;
@@ -682,5 +667,3 @@ table .pet {
     font-size: 80%;
   }
 }
-
-/*FADE*/
